--- a/WhiteWine.ipynb
+++ b/WhiteWine.ipynb
@@ -285,6 +285,16 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Machine Learning\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "15e918c27d1201b"
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "54ea334d-2552-4d89-ba3b-52cfd606122c",
